# preswald

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .projectile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SUBMISSION_SUMMARY.md  dockerfile  hello.py  mkdocs.yml  package-lock.json  package.json  preswald.toml  pyproject.toml  setup.py  simple_encoding_test.py  test_encoding_fix.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  example_request.md  test_request.md
.github/workflows/: ci.yml
.history/: .pre-commit-config_20250519120318.yaml  .pre-commit-config_20250519120704.yaml  .pre-commit-config_20250519120719.yaml
.history/docs/: configuration_20250519115324.mdx
.history/preswald/: utils_20250519015457.py
.history/tests/: test_logging_20250519115354.py  test_logging_20250519115433.py  test_logging_20250519115826.py  test_logging_20250519120349.py
autotest/: runtest.sh
community_gallery/: customer_purchase_data_analysis
community_gallery/Amazon_Product_Reviews/: README.md  hello.py
community_gallery/Bitcoin_market_app/: README.md  hello.py  preswald.toml  pyproject.toml
community_gallery/Chicago_crimes_2025/: README.md  hello.py  preswald.toml
community_gallery/Employee_well_being_analysis/: ReadMe.md  hello.py
community_gallery/FC24_Players_Dataset/: README.md  hello.py  preswald.toml
community_gallery/Formula_One_Analysis/: README.md  hello.py
community_gallery/Global-Music-Streams/: README.md  hello.py  preswald.toml
community_gallery/GreenShift/: README.md  hello.py  preswald.toml  pyproject.toml
community_gallery/Income-Demographic_Analysis/: hello.py  preswald.toml
community_gallery/Indian_Traffic_Violations/: README.md  hello.py  preswald.toml
community_gallery/Iris/: README.md  hello.py
community_gallery/LA_crime_report/: LACrimeReport.py  README.md  preswald.toml
community_gallery/Meteor Crashes/: README.md  hello.py  preswald.toml
community_gallery/Meteorite_Landings_Example/: README.md
community_gallery/Multi-City_Weather_App/: README.md  hello.py  preswald.toml
community_gallery/OlympicAnalysis/: hello.py  preswald.toml
community_gallery/PhonePricesComparison/: README.md  hello.py
community_gallery/Pokemon/: README.md  hello.py  pokemon_schema.md  preswald.toml
community_gallery/Seattle_Weather/: README.md  hello.py
community_gallery/Social Media Sentiment Analysis/: README.md  app.py  preswald.toml
community_gallery/StockFlow_Assessment/: README.md  hello.py  preswald.toml
community_gallery/Stock_Analysis/: README.md  hello.py  preswald.toml
community_gallery/Swiss_Apartment_Models/: README.md  hello.py  preswald.toml  requirements.txt
community_gallery/Top 10 Football Players Stats/: README.md  hello.py  preswald.toml  requirements.txt
community_gallery/Top_Ai_Companies/: README.md  hello.py
community_gallery/UFC-Records/: README.md  UFC_Records.csv  hello.py
community_gallery/US-Educational-Funds/: .gitignore  README.md  hello.py  preswald.toml
community_gallery/alzheimers_data_explorer/: README.md  hello.py
community_gallery/amazon-stock-insights/: README.md  hello.py  preswald.toml
community_gallery/amzn-stock-2025/: README.md  hello.py  preswald.toml
community_gallery/api_source/: hello.py  nasa.py  preswald.toml
community_gallery/automobile_sales/: README.md  hello.py  preswald.toml  requirements.txt
community_gallery/average_salary_by_job_montgomery/: README.md  data.csv  hello.py  preswald.toml
community_gallery/brain_tumor_dataset/: README.md  hello.py  preswald.toml
community_gallery/breast-cancer/: hello.py  preswald.toml  readme.md
community_gallery/car-models/: README.md  hello.py  preswald.toml  tx.py
community_gallery/chat_with_your_stocks/: .gitignore  README.md  hello.py  hello_copy.py  preswald.toml  sample.db
community_gallery/child_bmi_yearly/: README.md  hello.py  preswald.toml
community_gallery/chocolate_sales/: README.md  hello.py  preswald.toml
community_gallery/covid19/: README.md  hello.py  preswald.toml
community_gallery/covid_19_time_series/: README.md  hello.py  preswald.toml
community_gallery/credit-card-fraud-project/: README.md  hello.py  preswald.toml
community_gallery/cricket_dashboard/: README.md  hello.py  preswald.toml  pyproject.toml
community_gallery/crypto_market_analysis/: .gitignore  README.md  hello.py  preswald.toml
community_gallery/customer_purchase_data_analysis/: README.md  hello.py  preswald.toml
community_gallery/customer_spending_vs_income/: README.md  hello.py  preswald.toml
community_gallery/earthquakes/: hello.py
community_gallery/ecommerce-consumer-behavior/: README.md  hello.py  preswald.toml
community_gallery/ecommerce-sales/: README.md  hello.py  preswald.toml  requirements.txt
community_gallery/ecommerce_(swiggy-zomato-blinkit)/: hello.py  preswald.toml
community_gallery/education/: README.md  (+2 more)
community_gallery/electric_vehicle/: README.md  hello.py  preswald.toml  pyproject.toml
data/: sample.csv
docker/: preswald_app.Dockerfile
docs/: README.md  addnewcomponent.mdx  configuration.mdx  contributing.md  coreconcepts.md  data-sources.mdx  docs.json  introduction.md  introduction.mdx  quickstart.md  quickstart.mdx
documentation/: configuration.mdx
examples/: bug_simulation.py  dataframe_validation_example.py  embed_demo.html  embed_example.py
examples/coffee_sales/: README.md  hello.py  preswald.toml  pyproject.toml
examples/coffee_sales/data/: DatasetForCoffeeSales2.csv
frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
my_example_project/: README.md  hello.py  preswald.toml  pyproject.toml
newProj/: hello.py  preswald.toml
preswald/: cli.py  deploy.py  errors.py  main.py  utils.py
stack_overflow_developer_trends/: .gitignore  README.md  app.py  hello.py  preswald.toml  pyproject.toml  requirements.txt
szeged-weather/: README.md
tests/: embed_test.py  fe.css  foobar.js  html_export.html  service.js  test.py  test_dataframe_operations.py  test_logging.py  worker.js
(+698 files in other folders)
