[project]
name = "preswald"
version = "0.1.37"
description = "A lightweight data workflow SDK."
authors = [
    { name="Structured", email="founders@structuredlabs.com" },
]
license = { text = "Apache 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

dependencies = [
    "click>=8.1.8",
    "duckdb>=1.2.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "markdown>=3.7",
    "networkx>=3.4.2",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
    "plotly-stubs>=0.0.4",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.6",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PT",  # pytest
    "RUF", # Ruff-specific rules
    "W",   # pycodestyle warnings
]

# Ignore specific rules that don't fit your codebase
lint.ignore = [
    "E501",    # Line length (handled by Black)
    "B008",    # Do not perform function call in argument defaults (common in FastAPI)
]

# Exclude directories that shouldn't be linted
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "frontend",
    "*.egg-info",
    ".eggs",
]

# Allow automatic fixes
fix = true
unsafe-fixes = false

# Configure specific rules
[tool.ruff.lint.per-file-ignores]
"setup.py" = ["E402"]  # Module level import not at top of file
"tests/*" = ["PLR2004"]  # Magic numbers in tests are fine
"__init__.py" = ["F401"] # Unused imports in __init__ files are fine

[tool.ruff.lint.mccabe]
max-complexity = 12  # Slightly higher than default to accommodate your build commands

[tool.ruff.lint.pydocstyle]
convention = "google"  # Using Google style docstrings

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = []  # Add your project's modules here
known-third-party = []  # Add specific third-party modules here if needed
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Format configuration (replacing Black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
