[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preswald-app"
version = "0.1.0"
description = "A Preswald application"
requires-python = ">=3.8"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asttokens==3.0.0",
    "branca==0.8.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.2",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "duckdb==1.2.1",
    "executing==2.2.0",
    "fastapi==0.115.11",
    "folium==0.19.5",
    "geopandas==1.0.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython_pygments_lexers==1.1.1",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "Markdown==3.7",
    "MarkupSafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.2.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "preswald==0.1.41",
    "prompt_toolkit==3.0.50",
    "psutil==7.0.0",
    "pure_eval==0.2.3",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "Pygments==2.19.1",
    "pyogrio==0.10.0",
    "pyproj==3.7.1",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2025.1",
    "pywin32==309",
    "pyzmq==26.2.1",
    "requests==2.32.3",
    "shapely==2.0.7",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.46.1",
    "tenacity==9.0.0",
    "toml==0.10.2",
    "tomli==2.2.1",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wcwidth==0.2.13",
    "websockets==10.4",
    "xyzservices==2025.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3