[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greenshift"
version = "0.1.0"
description = "Analyzing Renewable Energy Adoption and Its Impact on Carbon Emissions"
requires-python = ">=3.8"
dependencies = [
    "preswald",
    "pandas",
    "plotly"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3